--- a/crime_analysis/static/css/style.css
+++ b/crime_analysis/static/css/style.css
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
 #header .logo {
   overflow: hidden;
   padding: 16px 30px 12px 30px;
-  background: #009970;
+  background: #180202;
 }
 
 #header .logo h1 {
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #fff;
+  color: rgba(255, 0, 0, 0.527);
   text-decoration: none;
 }
 
@@ -357,7 +357,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: url("../img/hero-bg.jpg") center center;
+  background: url("../img/pic2.jpg") center center;
   background-size: cover;
   position: relative;
 }
@@ -382,10 +382,13 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+  opacity: 0.5;
+
 }
 
 #hero h2 {
   color: #eee;
+  opacity: 0.5;
   margin-bottom: 40px;
   font-size: 15px;
   font-weight: 500;
